# SEOBNRv4CE

./: LICENSE  README.md  pyproject.toml
scripts/: bilby_analyze_injection.py
seobnrv4ce/: __init__.py  bbh_wf_uncertainty_bilby.py  lal_uncertainty_tools.py  uncertainty_model.py
seobnrv4ce/data/: uncertainty_interpolation_Mtot-50_fmin-20.0.hdf5
seobnrv4ce/scripts/: bilby_analyze_injection.py  run_example_slurm.sh
tests/: test_bbh_wf_uncertainty.py
tutorial/: SEOBNRv4CE.ipynb
